--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,6 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
+.drag-none {
+  user-drag: none;
+  -webkit-user-drag: none;
+  -moz-user-select: none;
+}
+
+img {
+  user-drag: none;
+  -webkit-user-drag: none;
+  -moz-user-select: none;
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
@@ -75,6 +87,7 @@
   }
 }
 
+html,
 body {
   width: 100%;
   height: 100%;
