--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -95,6 +95,9 @@ body {
   overflow-x: hidden;
   @apply antialiased;
 }
+html {
+  overflow-x: hidden;
+}
 
 /* scrollbar setup */
 ::-webkit-scrollbar {
