big update: use duck typing instead of importing type

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -14,6 +14,14 @@ img {
   -moz-user-select: none;
 }
 
+button {
+  user-select: none;
+}
+
+button[disabled] {
+  cursor: not-allowed !important;
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
